# OPEN-AGENTS-2026

./: .gitignore  DEMO_VIDEO_SCRIPT_ONCHOR_AI.md  LICENSE  README.md
.github/workflows/: publish.yml
0g/: .env.example  .manifest_root_hash  0g_download.js  0g_kv.js  0g_upload.js  package-lock.json  package.json
backend/: .gitignore  cli.py  onboarding.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  streaming_client.py  ui.py
backend/.onchor/: audits.json  config.json
backend/keeper/: direct_api.py  hub_anchor.py  mcp_tools.py  test_keeperhub.py
backend/memory/: cognee_client.py  cognee_setup.py  collective_0g.py  normalizer.py  privacy_guard.py
backend/onchor_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/payments/: x402_client.py  x402_pricing.py
backend/pipeline/: phase1_inventory.py  phase2_slither.py  phase3_triage.py  phase4_agent.py  phase5_anchor.py  phase6_report.py  phase_resolve.py  phases.py  streaming.py  utils.py
backend/scripts/: bootstrap_audits.py  bootstrap_collective_0g.py  bootstrap_immunefi.py  bootstrap_rekt.py  bootstrap_venv.sh  force_seed.py  run_e2e_quick.py  seed_memory.py  start_api.sh  test_0g_live.py  test_gateway.py  test_phase6.py  test_step5_only.py
backend/storage/: __init__.py  audits_store.py  hashes.json  og_client.py  zero_g_client.py  zero_g_kv_client.py
contracts/: hardhat.config.ts  package-lock.json  package.json
contracts/contracts/: AnchorRegistry.sol  AnchorRegistry.t.sol  SmartContract.sol  SmartContractV2.sol
contracts/contracts/Secure/: SecureVault.sol  (+1 more)
contracts/fixtures/: E2EMiniVault.sol  E2EMiniVault.sol.all_contracts.call-graph.dot
contracts/scripts/: deploy.ts  deployEulerVault.ts  ensManager.ts  resolve_pending_tx.py  setupENS.ts  testMintCert.ts  test_anchor.py  verify.ts  verifyChain.ts
examples/user-type-defi/: MockToken.sol  README.md  YieldVault.sol
frontend/: package-lock.json  package.json  skills-lock.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/lib/: api.ts  app-version.ts  mock-data.ts  types.ts
(+18 files in other folders)
