[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onchor-ai"
version = "0.1.10"
description = "Onchor.ai - Solidity Security Copilot with Persistent Collective Memory"
readme = "README.md"
license = "MIT"
authors = [{ name = "CNM Agency", email = "contact@cnm.agency" }]
dependencies = [
    "click>=8.1.7",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.26.0",
    "web3>=6.15.1",
    "slither-analyzer>=0.10.0",
    "cognee>=1.0.0",
    "openai>=1.12.0",
    "instructor>=0.5.2",
    "tenacity>=8.2.3",
    "eth-account>=0.11.0",
    "anthropic>=0.17.0",
    "requests>=2.31.0",
    "x402[fastapi,httpx,evm]>=0.1.0",
    "rich>=13.7.0",
    "rich-click>=1.7.0",
]
requires-python = ">=3.10"


[project.urls]
Homepage = "https://github.com/Mariussgal/OPEN-AGENTS-2026"


[project.scripts]
onchor-ai = "cli:cli"

[tool.setuptools]
py-modules = ["cli", "server", "ui", "streaming_client", "onboarding"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "payments*", "memory*", "keeper*", "storage*", "onchor_ens*"]


